<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDarkGrey"

    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/colorPrimaryDark" />


        <EditText
            android:id="@+id/editDistance"
            style="@style/mCustomEditText"
            android:hint="@string/app_distance" />

        <TextView
            style="@style/mCustomTextView"
            android:text="@string/viewDistance" />

        <EditText
            android:id="@+id/editPrice"
            style="@style/mCustomEditText"
            android:hint="@string/app_price" />

        <TextView
            style="@style/mCustomTextView"
            android:text="@string/viewPrice" />

        <EditText
            android:id="@+id/editAutonomy"
            style="@style/mCustomEditText"
            android:hint="@string/app_autonomy" />

        <TextView
            style="@style/mCustomTextView"
            android:text="@string/viewAutonomy" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="35dp"
            android:text="@string/viewSpent"
            android:textAllCaps="true"
            android:textColor="@color/colorGreenShiny"
            android:textSize="13sp" />


        <TextView
            android:id="@+id/textValue"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:text="@string/r_0_00"
            android:textAllCaps="true"
            android:textColor="@color/colorGreenShiny"
            android:textSize="50sp" />

        <Button
            android:id="@+id/buttonCalc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:background="@drawable/round_btm"
            android:padding="20dp"
            android:text="@string/calc"
            android:textColor="@color/colorDarkGrey"
            android:textSize="20sp" />

    </LinearLayout>

</ScrollView>